# poetry-docker-example

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: index.html  main.py
